# mibilleterabitcoin

./: Cargo.toml  README.md  config.json  package-lock.json  package.json  run.sh  turbo.json
apps/europa/: Cargo.toml  package.json
apps/europa/src/: config.rs  main.rs
apps/europa/src/onboard/: backup.rs  components.rs  create.rs  import.rs  landing.rs  mod.rs  unlock.rs  unlock_delete.rs  verify.rs
apps/europa/src/wallet/: accounts.rs  accounts_create.rs  accounts_edit.rs  dashboard.rs  mod.rs  send.rs  send_error.rs  send_success.rs
apps/europa/src/web/assets/: app.js  styles.css
crates/europa-common/: Cargo.toml  package.json
crates/europa-common/src/: lib.rs
crates/mibilleterabitcoin-common/: Cargo.toml  package.json
crates/mibilleterabitcoin-common/src/: lib.rs
